--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "techstudent10-color-theme",
     "displayName": "TechStudent10 Color Theme",
     "description": "The offical TechStudent10 VSCode Theme",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "engines": {
         "vscode": "^1.63.0"
     },
@@ -18,5 +18,10 @@
             }
         ]
     },
-    "publisher": "TechStudent10"
+    "publisher": "TechStudent10",
+    "icon": "images/icon.png",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/TechStudent10/TechStudent10-Color-Theme"
+    }
 }
